# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("../../../batterymgr.gni")

group("tests") {
  testonly = true
  deps = [ ":test_battery_info_ffi" ]
}

config("private_config") {
  include_dirs = [ "${battery_frameworks}/cj/include" ]
}

ohos_unittest("test_battery_info_ffi") {
  module_out_path = "${module_output_path}"
  configs = [
    "${battery_utils}:utils_config",
    "${battery_utils}:coverage_flags",
    ":private_config",
  ]

  sources = [ "battery_info_ffi_test.cpp" ]

  deps = [
    "${battery_inner_api}:batterysrv_client",
    "${battery_manager_path}/frameworks/cj:cj_battery_info_ffi",
    "${battery_service_zidl}:batterysrv_stub",
    "${battery_service}:batteryservice",
  ]

  external_deps = [
    "c_utils:utils",
    "googletest:gmock_main",
    "googletest:gtest_main",
    "hilog:libhilog",
    "napi:ace_napi",
    "napi:cj_bind_ffi",
    "napi:cj_bind_native",
  ]
}
