# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/features.gni")
import("//build/test.gni")

#####################hydra-fuzz###################
import("../../../batterymgr.gni")

##############################fuzztest##########################################
ohos_fuzztest("GetChargingStatusFuzzTest") {
  module_out_path = "${module_output_path}"
  fuzz_config_file =
      "${battery_manager_path}/test/fuzztest/getchargingstatus_fuzzer"

  include_dirs = [ "../battery_utils/" ]

  configs = [
    "${battery_utils}:coverage_flags",
    "${battery_utils}:utils_config",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [
    "../battery_utils/battery_fuzzer_test.cpp",
    "./getchargingstatus_fuzzer_test.cpp",
  ]
  deps = [
    "${battery_service_zidl}:batterysrv_stub",
    "${battery_service}:batteryservice",
    "//third_party/jsoncpp:jsoncpp",
  ]

  external_deps = [
    "c_utils:utils",
    "drivers_interface_battery:libbattery_proxy_2.0",
    "hdf_core:libhdi",
    "hdf_core:libpub_utils",
    "hilog:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
  ]
}
